--- a/lab4/templates/lab4/index.html
+++ b/lab4/templates/lab4/index.html
@@ -1,4 +1,4 @@
-% load sorl_thumbnail %}
+{% load thumbnail %}
 {% thumbnail item.image "100x100" crop="center" as im %}
     <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
 {% endthumbnail %}
