ajaxSubmit is not a function

--- a/uploads/templates/uploads/uploads.html
+++ b/uploads/templates/uploads/uploads.html
@@ -20,7 +20,7 @@
          <script src="upload.js"></script>
         <script type="text/javascript" charset="utf-8">
         $(function() {
-            nginxUploadProgress();
+            $.nginxUploadProgress();
         });
         </script>
     </head>
