--- a/uploads/templates/uploads/uploads.html
+++ b/uploads/templates/uploads/uploads.html
@@ -17,6 +17,7 @@
         }
         </style>
         <script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
+        <script src="http://malsup.github.com/jquery.form.js"></script> 
          <script src="upload.js"></script>
         <script type="text/javascript" charset="utf-8">
         $(function() {
