--- a/uploads/templates/uploads/uploads.html
+++ b/uploads/templates/uploads/uploads.html
@@ -9,36 +9,51 @@
         #progress {
           background: #eee;
           border: 1px solid #222;
+          margin-top: 20px;
         }
+
         #progressbar {
           width: 0px;
           height: 24px;
           background: #333;
         }
         </style>
-        <script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
-        <script src="http://malsup.github.com/jquery.form.js"></script> 
+        <script src="https://code.jquery.com/jquery-3.3.1.js" type="text/javascript"></script>
          <script src="upload.js"></script>
         <script type="text/javascript" charset="utf-8">
         $(function() {
-            $.nginxUploadProgress();
+          $('form').uploadProgress({
+            /* scripts locations for safari */
+            jqueryPath: "jquery.js",
+            uploadProgressPath: "upload.js",
+
+            /* function called each time bar is updated */
+            uploading: function(upload) {$('#percents').html(upload.percents+'%');},
+
+            /* selector or element that will be updated */
+            progressBar: "#progressbar",
+        
+            /* progress reports url */
+            progressUrl: "/progress",
+
+            /* how often will bar be updated */
+            interval: 2000
+          });
         });
         </script>
     </head>
     <body>
-        <div id="pandaloader">
-          <div id="uploader">
-            <form id="upload" enctype="multipart/form-data" action="/uploads/test" method="post">
-              <input name="file" type="file">
-              <input type="submit" value="Upload">
-            </form>
-          </div>
-
-          <div id="uploading">
-            <div id="progress" class="bar">
-              <div id="progressbar"> </div>
-            </div>
-          </div>
+        <form id="upload" enctype="multipart/form-data"
+        action="/uploads/test" method="post" onsubmit="openProgressBar(); return true;">
+          <input type="hidden" name="MAX_FILE_SIZE" value="30000000"  />
+          <input name="userfile" type="file" label="fileupload" />
+          <input type="submit" value="Send File" />
+        </form>
+        <div>
+         <div id="progress" style="width: 400px; border: 1px solid black">
+          <div id="progressbar" style="width: 1px; background-color: black; border: 1px solid white">&nbsp;</div>
+         </div>
+         <div id="tp">(progress)</div>
         </div>
         {% if uploaded_file_url %}
         <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
