add hasil and alter html view

--- a/cots2/templates/cots2/math.html
+++ b/cots2/templates/cots2/math.html
@@ -94,5 +94,8 @@
         <label><span>&nbsp;</span><input type="submit" value="Submit" /></label>
         </form>
         </div>
+        {% if hasil %}
+        <div class="form-style-2-heading">Hasil : {{ hasil }}/div>
+        {% endif %}
     </body>
 </html>
