--- a/cots2/templates/cots2/math.html
+++ b/cots2/templates/cots2/math.html
@@ -95,7 +95,7 @@
         </form>
         </div>
         {% if hasil %}
-        <div class="form-style-2-heading">Hasil : {{ hasil }}/div>
+        <div class="form-style-2-heading">Hasil : {{ hasil }}</div>
         {% endif %}
     </body>
 </html>
