--- a/cots2/templates/cots2/math.html
+++ b/cots2/templates/cots2/math.html
@@ -86,7 +86,7 @@
     <body>
         <div class="form-style-2">
         <div class="form-style-2-heading">Kalkulator Ajaib</div>
-        <form action="/cots2/result" method="post">
+        <form action="/cots2/orchestrator" method="get">
         <label for="field1"><span>A <span class="required">*</span></span><input type="text" class="input-field" name="a" value="" /></label>
         <label for="field2"><span>B <span class="required">*</span></span><input type="text" class="input-field" name="b" value="" /></label>
         <label for="field1"><span>C <span class="required">*</span></span><input type="text" class="input-field" name="c" value="" /></label>
