--- a/tugas2/templates/tugas2/math.html
+++ b/tugas2/templates/tugas2/math.html
@@ -88,19 +88,19 @@
         <div class="form-style-2">
         <div class="form-style-2-heading">Kalkulator Ajaib</div>
         <form id="form-id" action="/tugas2/orchestrator" method="get">
-        <label for="field1"><span>A <span class="required">*</span></span><input type="text" class="input-field" name="a" value="" /></label>
-        <label for="field2"><span>B <span class="required">*</span></span><input type="text" class="input-field" name="b" value="" /></label>
-        <label for="field1"><span>C <span class="required">*</span></span><input type="text" class="input-field" name="c" value="" /></label>
-        <label for="field2"><span>D <span class="required">*</span></span><input type="text" class="input-field" name="d" value="" /></label>
+        <label for="field1"><span>A <span class="required">*</span></span><input type="text" class="input-field" name="a" value="" id="a"/></label>
+        <label for="field2"><span>B <span class="required">*</span></span><input type="text" class="input-field" name="b" value="" id="b"/></label>
+        <label for="field1"><span>C <span class="required">*</span></span><input type="text" class="input-field" name="c" value="" id="c"/></label>
+        <label for="field2"><span>D <span class="required">*</span></span><input type="text" class="input-field" name="d" value="" id="d"/></label>
         <label><span>&nbsp;</span><input type="submit" value="Submit" /></label>
         </form>
-        <div class="form-style-2-heading">Hasil : {{ hasil }}</div>
+        <div class="form-style-2-heading">Hasil : <div id="hasil"></div></div>
         </div>
         <script type='text/javascript'>
             $("#form-id").submit(function(event) {
             /* stop form from submitting normally */
             event.preventDefault();
-
+            $("hasil").val("sedang menghitung");
             /* get the action attribute from the <form action=""> element */
             var $form = $( this ),
             url = $form.attr( 'action' );
@@ -110,7 +110,8 @@
 
             /* Alerts the results */
             posting.done(function( data ) {
-            console.log(data)
+                hasil = data["hasil"];
+                $("hasil").val(hasil);
               });
             });
         </script>
