--- a/lat_uas/templates/lat_uas/index.html
+++ b/lat_uas/templates/lat_uas/index.html
@@ -23,7 +23,7 @@
     </head>
     <body>
         <form id="upload" enctype="multipart/form-data"
-        action="/lat_uas/zip" method="post"">
+        action="/lat_uas/upload" method="post"">
           <input type="hidden" name="MAX_FILE_SIZE" value="30000000"  />
           <input name="userfile" type="file" label="fileupload" />
           <input type="submit" value="Send File" />
