--- a/lat_uas/templates/lat_uas/zip.html
+++ b/lat_uas/templates/lat_uas/zip.html
@@ -38,8 +38,9 @@
             if ("WebSocket" in window) {
                 var ws_stomp_display     = new SockJS( 'http://152.118.148.103:15674/stomp');
                 var client_display = Stomp.over(ws_stomp_display);
+                {% if exchange_method %}
                 var mq_queue_display    = {{exchange_method}};
-
+                {% endif %}
                 var on_connect_display = function() {
                   console.log('connected');
                   client_display.subscribe(mq_queue_display, on_message_display);
