--- a/lat_uas/templates/lat_uas/zip.html
+++ b/lat_uas/templates/lat_uas/zip.html
@@ -39,7 +39,7 @@
                 var ws_stomp_display     = new SockJS( 'http://152.118.148.103:15674/stomp');
                 var client_display = Stomp.over(ws_stomp_display);
                 {% if exc %}
-                var mq_queue_display    = {{exchange_method}};
+                var mq_queue_display    = {{exc_method}};
                 {% endif %}
                 var on_connect_display = function() {
                   console.log('connected');
