--- a/lat_uas/templates/lat_uas/zip.html
+++ b/lat_uas/templates/lat_uas/zip.html
@@ -38,7 +38,7 @@
             if ("WebSocket" in window) {
                 var ws_stomp_display     = new SockJS( 'http://152.118.148.103:15674/stomp');
                 var client_display = Stomp.over(ws_stomp_display);
-                {% if exc %}
+                {% if exc_method %}
                 var mq_queue_display    = {{exc_method}};
                 {% endif %}
                 var on_connect_display = function() {
@@ -52,8 +52,7 @@
 
                 var on_message_display = function(m) {
                   console.log('message received');
-                  var e = document.getElementById("jam");
-                  e.id = m.body;
+                  $('#jam').html(m.body);
                 };
                 client_display.connect('1406559055', '1406559055', on_connect_display, on_error_display, '/1406559055');
 
