--- a/lat_uas/templates/lat_uas/zip.html
+++ b/lat_uas/templates/lat_uas/zip.html
@@ -39,6 +39,7 @@
                 var ws_stomp_display     = new SockJS( 'http://152.118.148.103:15674/stomp');
                 var client_display = Stomp.over(ws_stomp_display);
                 var mq_queue_display    = {{exc_method}};
+                console.log(mq_queue_display);
                 
                 var on_connect_display = function() {
                   console.log('connected');
