--- a/lat_uas/templates/lat_uas/zip.html
+++ b/lat_uas/templates/lat_uas/zip.html
@@ -26,21 +26,19 @@
          </div>
          <div id="tp">(progress)</div>
         </div>
-        <div id=jam></div>
+        <div id="jam"></div>
+        <div id="filename">{{exc_method}}</div>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
       <script type = "text/javascript">
-      var url_string = window.location.href;
-      var url = new URL(url_string);
-      var filename = url.searchParams.get("file");
       WebSocketTest();
       function WebSocketTest() {
 
             if ("WebSocket" in window) {
                 var ws_stomp_display = new SockJS('http://152.118.148.103:15674/stomp');
                 var client_display = Stomp.over(ws_stomp_display);
-                var mq_queue_display = '/exchange/ZIP_QUEUE/'+filename;
+                var mq_queue_display = $('filename');
                 var on_connect_display = function() {
                   console.log('connected');
                   client_display.subscribe(mq_queue_display, on_message_display);
