--- a/lat_uas/templates/lat_uas/zip.html
+++ b/lat_uas/templates/lat_uas/zip.html
@@ -32,13 +32,14 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
       <script type = "text/javascript">
+      var filename = document.getElementById("filename");
       WebSocketTest();
       function WebSocketTest() {
 
             if ("WebSocket" in window) {
                 var ws_stomp_display = new SockJS('http://152.118.148.103:15674/stomp');
                 var client_display = Stomp.over(ws_stomp_display);
-                var mq_queue_display = $('filename');
+                var mq_queue_display = filename;
                 var on_connect_display = function() {
                   console.log('connected');
                   client_display.subscribe(mq_queue_display, on_message_display);
