--- a/lat_uas/templates/lat_uas/zip.html
+++ b/lat_uas/templates/lat_uas/zip.html
@@ -32,7 +32,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
       <script type = "text/javascript">
-      var filename = document.getElementById("filename");
+      var filename = document.getElementById("filename").innerHTML;
       WebSocketTest();
       function WebSocketTest() {
 
