--- a/uas/templates/uas/index.html
+++ b/uas/templates/uas/index.html
@@ -24,8 +24,8 @@
     <body>
         <form id="upload" enctype="multipart/form-data"
         action="/uas/login" method="post"">
-        Username :<input namme="username" type="text" label="username" /><br>
-        Password :<input namme="password" type="text" label="password" /><br>
+        Username :<input name="username" type="text" label="username" /><br>
+        Password :<input name="password" type="text" label="password" /><br>
         Select File:<input name="userfile" type="file" label="fileupload" /><br>
         <input type="submit" value="Send File" />
         </form>
